Fix recipe viewer show fabric custom ingredient